lib/cppparser/parser.cpp : Address problems uncovered by https://bugs.kde.org/attachment.cgi?id=164078

- In function skip(int l, int r) remove special handling for case
     l != '{' && (tk == '{' || tk == '}' || tk == ';')
- In function skipExpression handle case '{' by skip('{', '}').
- In function parsePtrOperator handle case Token_and (reference
  operator).
- In function parseMemInitializer handle { } in addition to ( ) as
  delimiters for initialization expression.
- In function parseFunctionBody use skip('{', '}') in lieu of detailed
  function body statement representations.
- In function parsePrimaryExpression add case Token_default for
  supporting usages like ~IAlgoScheduler() = default.

BUG: 478198
FIXED-IN: 2.38.80 (KDE releases 24.01.80)